# summa-solvency

backend/examples/: summa_solvency_flow.rs
backend/src/contracts/abi/: InclusionVerifier.json
contracts/: hardhat.config.ts
contracts/scripts/: deploy.ts
contracts/src/: InclusionVerifier.sol
test/: Cargo.toml  bob_proof.json  incl_proof.json
test/input/: entry.csv  sig.csv
test/signature/: main.mjs  package-lock.json  package.json
test/src/: main.rs
zk_prover/examples/: gen_commitment.rs  gen_inclusion_proof.rs  gen_inclusion_verifier.rs  nova_incremental_verifier.rs
