[package]
name = "custody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
summa-solvency = { path = "../zk_prover" }
summa-backend = { path = "../backend" }
tokio = { version = "1.7.1", features = ["full"] }
ethers = "2.0"
serde_json = "1.0.64"
hex = "0.4.3"
